--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
+{
+  "rewrites": [
     {
-      "rewrites": [
-        { "source": "/(.*)", "destination": "/" }
-      ]
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
+  ]
+}
