--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "dompurify": "^3.3.1",
     "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.12.33",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "react-phone-input-2": "^2.15.1",
